--- a/app/scss/_template.scss
+++ b/app/scss/_template.scss
@@ -7,16 +7,33 @@
         url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>') format('svg');
 }
 
-@mixin <%= cssClass%>-styles {
-    font-family: "<%= fontName %>";
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: "<%= fontName %>" !important;
+    speak: none;
     font-style: normal;
-    font-variant: normal;
     font-weight: normal;
-    // speak: none; // only necessary if not using the private unicode range (firstGlyph option)
-    text-decoration: none;
+    font-variant: normal;
     text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+@mixin <%= cssClass%>-styles {
+    font-family: "<%= fontName %>" !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 %<%= cssClass%> {
@@ -35,11 +52,11 @@
 
 @mixin <%= cssClass%>($filename, $insert: before, $extend: true) {
     &:#{$insert} {
-        @if $extend {
-            @extend %<%= cssClass%>;
-        } @else {
-            @include <%= cssClass%>-styles;
-        }
+//        @if $extend {
+//            @extend %<%= cssClass%>;
+//        } @else {
+//            @include <%= cssClass%>-styles;
+//        }
         content: <%= cssClass%>-char($filename);
     }
 }
